--- a/package.json
+++ b/package.json
@@ -21,14 +21,26 @@
     "nodemon": "^1.17.2"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.11",
+    "apollo-client": "^2.2.7",
+    "apollo-link": "^1.2.1",
+    "apollo-link-http": "^1.5.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
+    "html-webpack-plugin": "^3.1.0",
     "mongoose": "^5.0.11",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "vue-apollo": "^3.0.0-beta.5",
+    "webpack": "^4.2.0",
+    "webpack-dev-middleware": "^3.0.1",
+    "wolfram": "^0.3.4"
   }
 }
