--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "nodemon": "^1.17.2"
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "nodemon": "^1.17.2",
+    "vue-loader": "^14.2.1",
+    "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.11",
     "apollo-client": "^2.2.7",
     "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.5.3",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
@@ -38,7 +42,9 @@
     "mongoose": "^5.0.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "vue": "^2.5.16",
     "vue-apollo": "^3.0.0-beta.5",
+    "vue-router": "^3.0.1",
     "webpack": "^4.2.0",
     "webpack-dev-middleware": "^3.0.1",
     "wolfram": "^0.3.4"
