--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,15 @@
   "author": "nestor-gm",
   "license": "ISC",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.11",
+    "apollo-client": "^2.2.7",
+    "apollo-link": "^1.2.1",
+    "apollo-link-http": "^1.5.3",
     "bootstrap": "^3.3.7",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "vue": "^2.0.1",
+    "vue-apollo": "^3.0.0-beta.5",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0"
