--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "apollo-link-http": "^1.5.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
