--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "vue-apollo": "^3.0.0-beta.5",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
-    "vuex": "^2.5.0"
+    "vuex": "^2.5.0",
+    "wolfram": "^0.3.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
