--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,8 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "html-webpack-plugin": "^3.1.0",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.22.0",
     "mongoose": "^5.0.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
