--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.5.3",
     "bootstrap": "^3.3.7",
+    "bootstrap-vue": "^2.0.0-rc.6",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "vue": "^2.0.1",
@@ -38,6 +39,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "style-loader": "^0.20.3",
     "vue-loader": "^9.7.0",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "2.1.0-beta.0"
