--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "2"
 services:
   web:
-    build: .
+    build: ./server
     ports:
       - "4000:4000"
     links:
       - mongo
+  client: 
+    build: ./client
+    ports:
+      - "3000:3000"
   mongo:
     image: mongo
     volumes:
