--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "client side app allin",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --port 3000 --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
